--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,114 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+* {
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+        Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+ 
+body{
+   background-image: url("./media/weatherImage.jpeg");
+    background-size:contain; 
+}
+ 
+.app-name {
+    font-size: 2.3rem;
+    color: black;
+    margin-bottom: 16px;
+}
+ 
+.App {
+    display: flex;
+    
+    flex-direction: column;  
+    justify-content: center;
+    align-items: center;
+    width: 600px;
+    min-height: 440px;
+    background-color: rgb(27, 79, 95);
+    text-align: center;
+    margin: 100px auto;
+    border-radius: 10px;
+    padding-bottom: 32px;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 1);
+}
+ 
+.city-search {
+    width: 100%;
+    max-width: 400px;
+    box-sizing: border-box;
+    border: 2px solid rgb(204, 204, 204);
+    outline: none;
+    border-radius: 20px;
+    font-size: 16px;
+    background-color: #e5eef0;
+    background-position: 10px 12px;
+    background-repeat: no-repeat;
+    padding: 12px 40px 12px 40px;
+    -webkit-transition: width 0.4s ease-in-out;
+    transition: width 0.4s ease-in-out;
+    color:black;
+}
+ 
+.city-search:focus {
+    width: 100%;
+}
+ 
+.city-name {
+    font-size: 1.5rem;
+    color:black;
+    margin-bottom: 8px;
+}
+ 
+.date {
+    font-size: 1.25em;
+    font-weight: 500;
+    color:black;
+}
+ 
+.icon-temp {
+    font-size: 3rem;
+    font-weight: 700;
+    color: black;
+    text-align: center;
+}
+ 
+.deg {
+    font-size: 1.3rem;
+    vertical-align: super;
+}
+ 
+.des-wind {
+    font-weight: 500;
+    color: white;
+}
+ 
+.error-message {
+    display: block;
+    text-align: center;
+    color: #d32f2f;
+    font-size: 24px;
+    margin-top: auto;
+}
+ 
+.Loader {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+}
+ 
+.Loader>div {
+    margin: 0 auto;
+}
+ 
+.weather-icon {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+ 
+.weather-icon img {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
